examples/misc/error/wip/gen_shift-2.bfr
let main = [
  $build {
    a: array(2) { i: index }
  }
  > a@i (-2)
]